# Mlang

./: .gitignore  README.md
.github/workflows/: publish.yml
docs/: README.md
docs/01-language/: 01-syntax.md  03-control-flow.md  04-classes.md  05-error-handling.md  06-collections.md
docs/02-api/: 02-world.md  04-item.md  05-inventory.md  06-chat.md  07-sound-particle.md  09-nbt.md  10-effect.md
docs/03-stdlib/: 02-string.md  04-dict.md  07-time.md  09-color.md
docs/04-gui/: 01-widgets.md
docs/05-tutorials/: 02-first-script.md
docs/06-bridge/: 01-protocol.md
mlang/: README.md  pyproject.toml
mlang-mod/: build.gradle  build.ps1  gradle.properties  hotbuild.ps1  watch.ps1
mlang-mod/src/main/resources/: fabric.mod.json
mlang/mlang/: __init__.py  __main__.py  cli.py  repl.py
mlang/mlang/api/: __init__.py  bridge_api.py
mlang/mlang/bridge/: __init__.py  client.py  errors.py
mlang/mlang/gui/: __init__.py  animations.py  effects.py  layout.py  renderer.py  themes.py  widgets.py  window.py
mlang/mlang/lang/: ast_nodes.py  environment.py  errors.py  interpreter.py  lexer.py  parser.py  tokens.py
mlang/tests/: demo.glang  example_mc.py  gm.py  hello.glang  test_enum.glang  test_full.glang  test_gui.py  test_interpreter.py  test_lexer.py  test_parser.py
site/: index.html  package-lock.json  package.json  vite.config.js
site/public/docs/de/: 08-roadmap.md  README.md
site/public/docs/de/01-language/: 01-syntax.md  (+4 more)
site/public/docs/en/: 08-roadmap.md  README.md
site/public/docs/pl/: 08-roadmap.md  README.md
site/src/: main.js  style.css
(+115 files in other folders)
