[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mclang"
version = "1.0.0"
description = "MLang - Minecraft scripting language with WebSocket bridge"
authors = [{name = "Gosciu"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["minecraft", "scripting", "language", "websocket", "fabric", "mod"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "websockets>=12.0",
    "colorama>=0.4.6",
]

[project.scripts]
mlang = "mlang.cli:main"

[project.urls]
Homepage = "https://github.com/Gamer542-arch/MLang"
Documentation = "https://mlang-docs.vercel.app"
Repository = "https://github.com/Gamer542-arch/MLang"
Issues = "https://github.com/Gamer542-arch/MLang/issues"

[tool.setuptools.packages.find]
include = ["mlang*"]
